partially closing feature #2362 From "Composant" to "Application" (FR)

--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
@@ -27,12 +27,12 @@ importExportPeas.ImportDescriptor 		= Descripteur XML d'importation
 importExportPeas.Import 				= Lancer l'importation
 
 importExportPeas.StatGlobal				= Statistiques globales
-importExportPeas.StatComponent			= Statistiques par composant
+importExportPeas.StatComponent			= Statistiques par application
 
 importExportPeas.ImportDuration			= Durée
 importExportPeas.NbFilesImported		= Nombre de fichiers importés
 importExportPeas.NbFilesNotFound		= Nombre de fichiers inaccessibles 
-importExportPeas.Composant				= Composant
+importExportPeas.Composant				= Application
 
 importExportPeas.NbPubCreated			= Nb publications créées
 importExportPeas.NbPubUpdated			= Nb publications modifiées
@@ -42,7 +42,7 @@ importExportPeas.Status					= Statut
 importExportPeas.Repository				= Répertoire
 
 importExportPeas.ImportError0			= Erreur inattendue
-importExportPeas.ImportError1			= Composant inexistant
+importExportPeas.ImportError1			= Application inexistante
 importExportPeas.ImportError2			= Fichier inexistant ou inaccessible
 importExportPeas.ImportError3			= Répertoire inexistant ou inaccessible
 importExportPeas.ImportError4			= Méta donnée incorrecte
