--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_fr.properties
@@ -26,7 +26,7 @@ JSP.searchTab = Recherche
 JSP.searchField = Identifiant ou Nom (hors Publications)
 JSP.search = Rechercher
 JSP.space = Espaces / sous-espaces
-JSP.service = Services
+JSP.service = Applications
 JSP.publication = Publications
 JSP.group = Groupes / sous-groupes d\'utilisateurs
 JSP.user = Utilisateurs
