--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
@@ -45,9 +45,9 @@ lookSilverpeasV5.directory = Annuaire
 lookSilverpeasV5.connectedUser = autre utilisateur connecté
 lookSilverpeasV5.connectedUsers = autres utilisateurs connectés
 
-lookSilverpeasV5.personalSpace.add = Ajouter un composant...
-lookSilverpeasV5.personalSpace.select = Sélectionnez un composant :
-lookSilverpeasV5.personalSpace.remove.confirm = Etes-vous sûr(e) de vouloir supprimer définitivement ce composant et tout ce qu'il contient ?
+lookSilverpeasV5.personalSpace.add = Ajouter une application...
+lookSilverpeasV5.personalSpace.select = Sélectionnez une application :
+lookSilverpeasV5.personalSpace.remove.confirm = Etes-vous sûr(e) de vouloir supprimer définitivement cette application et tout ce qu'elle contient ?
 lookSilverpeasV5.personalSpace.gallery = Mes images
 lookSilverpeasV5.personalSpace.rssAgregator = Mes flux RSS
 lookSilverpeasV5.personalSpace.kmelia = Mes documents
