--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_fr.properties
@@ -25,7 +25,7 @@ notification.title = Une nouvelle publication classée
 standartMessage = Une nouvelle publication dans un de vos centres d'intérêt
 Space    = Espace : 
 Subscription = Centre d'intérêt : 
-Service  = KM Service : 
+Service  = Application : 
 Date     = Date : 
 URL      = Lien : 
 Axis     = Axe : 
