--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
@@ -31,7 +31,7 @@ workflowDesigner.confirmRemoveJS = Voulez-vous vraiment supprimer l\\'élément :
 workflowDesigner.confirmProcessReferencedJS = Attention !\\nVous êtes en train de modifier un modèle abstrait de processus \\nqui peut être exécuté dans le moteur de Workflow. \\nVoulez-vous continuer ?   
 workflowDesigner.Either = Ou
 workflowDesigner.or = ou
-workflowDesigner.editor.componentDescriptor = Génération d'un descriptif de composant 
+workflowDesigner.editor.componentDescriptor = Génération d'un descriptif de l'application 
 workflowDesigner.component.parameters = Veuillez saisir les paramètres du descriptif :
 workflowDesigner.component.labelSelection = Veuillez choisir les libellés pour les profiles du descriptif :
 
@@ -113,7 +113,7 @@ workflowDesigner.add.state = Ajouter un &eacute;tat
 workflowDesigner.add.title = Ajouter un titre
 workflowDesigner.addWorkflow = Ajouter un workflow
 workflowDesigner.importWorkflow = Importer un workflow
-workflowDesigner.generate.componentDescriptor = Générer un descriptif de composant
+workflowDesigner.generate.componentDescriptor = Générer un descriptif de l'application
 
 # Filed & column names
 workflowDesigner.action = Action
@@ -194,7 +194,7 @@ d'une instance de ce modèle de procédure. C'est le dossier personnel d'un utilis
 workflowDesigner.help.toolName = Editeur de workflow est un outil qui permet de : <ul>\
 <li>Modifier facilement le modèle abstrait de procédure.</li>\
 <li>Assurer la validité du modèle.</li>\
-<li>Créer automatiquement un descriptif de composant.</li>\
+<li>Créer automatiquement un descriptif de l'application.</li>\
 <li>Modifier un modèle de procédure qui est exécuté.</li></ul>
 
 workflowDesigner.help.workflowHeader = Cet écran permet de : <ul>\
@@ -202,12 +202,12 @@ workflowDesigner.help.workflowHeader = Cet écran permet de : <ul>\
 <li>Saisir le nom du fichier XML où le modèle est sauvegardé. \
 Une fois que le modèle est sauvegardé, le nom ne peut plus être modifié.</li>\
 <li>Ajouter des libellés et des descriptions.</li>\
-<li>Générer ou mettre à jour le fichier de descripteur de composant.</li></ul>
+<li>Générer ou mettre à jour le fichier de descripteur de l'application.</li></ul>
 
 workflowDesigner.help.componentDescriptor = Cet écran permet de : <ul>\
-<li>Saisir le libellé du composant, obligatoire.</li>\
-<li>Saisir la description du composant, obligatoire.</li>\
-<li>Choisir la langue et les libellés pour les profils du composant.</li>
+<li>Saisir le libellé de l'application, obligatoire.</li>\
+<li>Saisir la description de l'application, obligatoire.</li>\
+<li>Choisir la langue et les libellés pour les profils de l'application.</li>
 
 workflowDesigner.help.action = L'écran permet de : <ul>\
 <li>Saisir le nom de l'action, obligatoire.</li>\
