--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_fr.properties
@@ -54,7 +54,7 @@ address=Adresse
 operations=Opérations
 libelle=Libellé
 requiredFields=Obligatoire
-component= Service
+component= Application
 default=Defaut
 description=Message
 method=Moyen
