--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_fr.properties
@@ -21,6 +21,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-clickBelow = Cliquer ici pour accéder au KM Service :
+clickBelow = Cliquer ici pour accéder à l'application :
 clickHere = Cliquez ici
 ToAccessDocument = pour accéder directement à ce document.
