--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -136,7 +136,7 @@ pdcPeas.SortValueSearch.5 = Date de modification
 pdcPeas.SortValueSearch.6 = Emplacement
 pdcPeas.SortValueSearch.7 = Popularit\u00e9
 pdcPeas.DomainSelect = Espace :
-pdcPeas.ComponentSelect = Service :
+pdcPeas.ComponentSelect = Application :
 pdcPeas.AuthorSelect = Publieur :
 pdcPeas.CreateAfterDate = Publi\u00e9 apr\u00e8s le :
 pdcPeas.UpdateAfterDate = Modifi\u00e9 apr\u00e8s le :
@@ -274,7 +274,7 @@ pdcpeas.didYouMean= Essayez avec cette orthographe :
 
 # Facet group search message
 pdcPeas.group.author= Auteur
-pdcPeas.group.service= Service
+pdcPeas.group.service= Application
 pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}
 pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}
 
