--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -43,7 +43,7 @@ browseBar_Path4 = Modification du canal de notification
 type= Type
 usage = Usage
 adresse = Contact
-composant = Service
+composant = Application
 notif_type = Type de notification
 dest = Moyen
 default = Par d\u00E9faut
