--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_fr.properties
@@ -44,5 +44,5 @@ portlet.HelloSilverpeas.title = Bienvenue
 portlet.MyBookmarks.title = Mes liens favoris
 portlet.MyCheckOutFiles.title = Mes fichiers r\u00e9serv\u00e9s
 portlet.QuickInfos.title = Actualit\u00e9s
-portlet.ComponentInstance.title = Un composant
+portlet.ComponentInstance.title = Une application
 portlet.IFrame.title = IFrame
