--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
@@ -48,8 +48,8 @@ silverStatisticsPeas.Connections 		 = Connexions
 silverStatisticsPeas.LoginNumber 		 = Nombre de connexions
 silverStatisticsPeas.AccessNumber	 	 = R\u00E9partition des acc\u00E8s
 silverStatisticsPeas.ToSpace	 	 	 = \u00E0 l'espace
-silverStatisticsPeas.JobPeas	 	 	 = Services
-silverStatisticsPeas.ServicesNumber	 	 = R\u00E9partition par type de services
+silverStatisticsPeas.JobPeas	 	 	 = Applications
+silverStatisticsPeas.SrevicesNumber	 	 = R\u00E9partition par type d'applications
 silverStatisticsPeas.InstancesNumber	 	 = Nombre d'instances
 silverStatisticsPeas.VolumeNumber	 	 = R\u00E9partition des publications
 silverStatisticsPeas.VolumeDocsNumber	 	 = R\u00E9partition des fichiers joints
@@ -64,7 +64,7 @@ silverStatisticsPeas.Historique                  = Historique \u00E9volution
 silverStatisticsPeas.Access                  	 = Acc\u00E8s
 silverStatisticsPeas.EvolutionAccessDeb 	 = Historique \u00E9volution des acc\u00E8s
 silverStatisticsPeas.EvolutionAccessSpace 	 = \u00E0 l'espace
-silverStatisticsPeas.EvolutionAccessService 	 = au service
+silverStatisticsPeas.EvolutionAccessService 	 = à l'application
 silverStatisticsPeas.EvolutionAccessGroup 	 = du groupe
 silverStatisticsPeas.EvolutionAccessUser 	 = de l'utilisateur
 silverStatisticsPeas.ClearUserPanelPeas 	 = Effacer filtre
