--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_fr.properties
@@ -27,7 +27,7 @@ clipboard = Presse-Papier
   retour = Retour
 // attribut
   titre = Titre
-  composant = Service
+  composant = Application
   information = Description 
   dateDebut = Début de visibilité
   dateFin = Fin de visibilité
