--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_fr.properties
@@ -32,7 +32,7 @@ AdministrationStat = Statistiques
 SpaceEntreprise = Espace Entreprise
 SpaceCollaboration = Espaces Collaboratifs
 SpacePersonal = Espace Personnel
-Component = Service
+Component = Application
 AxisCollaboration = Documents dans 
 AxisEmpty = no PDC
 
@@ -106,7 +106,7 @@ BackToMainPageSpace = Retour sur la page principale de l'espace
 
 
 navigationView = Navigation
-byComponent = Par Service
+byComponent = Par application
 bySpace = Par Espace
 
 reductExtend = R\u00E9duire / Etirer
