--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -50,7 +50,7 @@ GML.category	 				= Cat\u00e9gorie
 GML.cellularPhoneNumber 	    = T\u00e9l. mobile
 GML.close						= Fermer
 GML.company 					= Soci\u00e9t\u00e9
-GML.component                   = KM Service
+GML.component                   = Application
 GML.copy 						= Copier
 GML.create						= Cr\u00e9er
 GML.createPublication			= Cr\u00e9er une publication
@@ -91,7 +91,7 @@ GML.homePhoneNumber 			= T\u00e9l. domicile
 
 GML.insertHere					= Ins\u00e9rer ici
 
-GML.jobPeas						= Service
+GML.jobPeas						= Application
 
 GML.keyWords                    = Mots cl\u00e9s
 GML.kmmanager                   = Gestionnaire du Plan de Classement
@@ -304,7 +304,7 @@ GML.mandatory = Obligatoire
 GML.and = et
 GML.reset = Remise \u00e0 z\u00e9ro
 
-GML.operations.setupComponent = Param\u00e9trer ce service
+GML.operations.setupComponent = Param\u00e9trer cette application
 
 GML.to = au
 GML.at = \u00e0
