--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_fr.properties
@@ -30,7 +30,7 @@ notification.pleaseValidate = Vous devez valider ce document
 
 versioning.DocumentName = Document
 versioning.Space = Espace
-versioning.Component = KM Service
+versioning.Component = Application
 versioning.Date = Date
 versioning.URL = Lien
 
