--- a/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
@@ -30,7 +30,7 @@ admin.MSG_DUMP_USER = Informations utilisateur
 admin.MSG_DUMP_GROUP = Informations groupe
 
 admin.EX_ERR_ADD_DOMAIN = Problème dans la création d'un domaine
-admin.EX_ERR_ADD_COMPONENT = Problème dans la création d'un composant
+admin.EX_ERR_ADD_COMPONENT = Problème dans la création d'une application
 admin.EX_ERR_ADD_GROUP = Problème dans la création d'un groupe
 admin.EX_ERR_ADD_PROFILE = Problème dans la création d'un role
 admin.EX_ERR_ADD_SPACE = Problème dans la création d'un espace
@@ -43,9 +43,9 @@ admin.EX_ERR_ADD_USERSET_USERSET_RELATION = Problème dans la création d'une rela
 admin.EX_ERR_GET_USERSET_NUMBER = Problème dans l'obtention du nombre d'utilisateurs
 admin.EX_ERR_AUTHENTICATE = Problème dans l'authentification de l'utilisateur
 admin.EX_ERR_CANT_INSTANCIATE_GROUP_CLASS = La classe du groupe LDAP ne peut être instanciée
-admin.EX_ERR_COMPONENT_FOUND_TWICE = Le composant trouvé plusieurs fois alors qu'il doit être unique
+admin.EX_ERR_COMPONENT_FOUND_TWICE = Application trouvé plusieurs fois alors qu'il doit être unique
 admin.EX_ERR_CONNECTION_IS_NULL = La connection fournie en parametre vaut NULL
-admin.EX_ERR_DELETE_COMPONENT = Problème dans la supression d'un composant
+admin.EX_ERR_DELETE_COMPONENT = Problème dans la supression d'une application
 admin.EX_ERR_DELETE_GROUP = Problème dans la supression d'un groupe
 admin.EX_ERR_DELETE_PROFILE = Problème dans la supression d'un role
 admin.EX_ERR_DELETE_SPACE = Problème dans la supression d'un espace
@@ -82,8 +82,8 @@ admin.EX_ERR_GET_ALL_SUBSPACE_IDS = Erreur lors de l'obtention de la liste des i
 admin.EX_ERR_GET_ALL_USER_IDS = Erreur lors de l'obtention de la liste des ids des utilisateurs
 admin.EX_ERR_GET_ALL_USERS = Erreur lors de l'obtention de la liste des utilisateurs
 admin.EX_ERR_GET_CHILDREN_GROUP_IDS = Erreur lors de l'obtention de la liste des ids des sous-groupes
-admin.EX_ERR_GET_COMPONENT = Erreur lors de l'obtention d'un composant
-admin.EX_ERR_GET_COMPONENT_PARAMS = Erreur lors de l'obtention des paramètres d'un composant
+admin.EX_ERR_GET_COMPONENT = Erreur lors de l'obtention d'une application
+admin.EX_ERR_GET_COMPONENT_PARAMS = Erreur lors de l'obtention des paramètres d'une application
 admin.EX_ERR_GET_DOMAIN = Erreur lors de l'obtention d'un domaine
 admin.EX_ERR_GET_DOMAIN_DRIVER = Erreur lors de l'obtention du driver d'un domaine
 admin.EX_ERR_GET_GROUP = Erreur lors de l'obtention d'un groupe
@@ -98,21 +98,21 @@ admin.EX_ERR_GET_SPACE_PROFILE = Erreur lors de l'obtention d'un profil d'espace
 admin.EX_ERR_GET_SPACE_COMPONENTIDS = Erreur lors de l'obtention des instanceId d'un espace
 admin.EX_ERR_GET_USER = Erreur lors de l'obtention des espaces à partir des ids
 admin.EX_ERR_GET_USER_ALLOWED_SPACE_IDS = Erreur lors de l'obtention des espaces accessibles par l'utilisateur
-admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Erreur lors de l'obtention des ids des composants accessibles par l'utilisateur
-admin.EX_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur lors de l'obtention des instances accessibles pour un type de composant donné
-admin.EX_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur lors de l'obtention des instances d'un type de composant donné
+admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Erreur lors de l'obtention des ids des applications accessibles par l'utilisateur
+admin.EX_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur lors de l'obtention des instances accessibles pour un type d'application donné
+admin.EX_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur lors de l'obtention des instances d'un type d'application donné
 admin.EX_ERR_GET_USER_BY_ALIAS = Erreur lors de l'obtention d'un utilisateur par son alias
 admin.EX_ERR_GET_USER_BY_LOGIN_DOMAIN = Erreur lors de l'obtention d'un utilisateur par son login et son domain
 admin.EX_ERR_GET_USER_DETAIL = Erreur lors de l'obtention des details d'utilisateur
 admin.EX_ERR_GET_USER_DETAILS = Erreur lors de l'obtention des details de plusieurs utilisateurs
 admin.EX_ERR_GET_USER_GROUPS = Erreur lors de l'obtention des différents groupes d'un utilisateur
-admin.EX_ERR_GET_USER_MANAGEABLE_SPACE_IDS = Erreur lors de l'obtention des ids composants gérables par l'utilisateur
+admin.EX_ERR_GET_USER_MANAGEABLE_SPACE_IDS = Erreur lors de l'obtention des ids des applications gérables par l'utilisateur
 admin.EX_ERR_GET_USER_PROFILES = Erreur lors de l'obtention des différents rôles d'un utilisateur
 admin.EX_ERR_GET_GROUP_PROFILES = Erreur lors de l'obtention des différents rôles d'un groupe
 admin.EX_ERR_GET_USER_SPACEPROFILES = Erreur lors de l'obtention des différents rôles d'espace d'un utilisateur
 admin.EX_ERR_GET_USERPROFILE = Erreur lors de l'obtention du profil utilisateur
 admin.EX_ERR_GET_USERS = Erreur lors de l'obtention d'une liste d'utilisateur à partir de leur id
-admin.EX_ERR_GET_USERS_FOR_PROFILE_AND_COMPONENT = Erreur lors de l'obtention des utilisateurs correspondant à un composant et a un role
+admin.EX_ERR_GET_USERS_FOR_PROFILE_AND_COMPONENT = Erreur lors de l'obtention des utilisateurs correspondant à une application et a un role
 admin.EX_ERR_GET_USERS_OF_DOMAIN = Erreur lors de l'obtention des utilisateurs d'un domaine
 admin.EX_ERR_GET_USERS_OF_PROFILE = Erreur lors de l'obtention des utilisateurs correspondant à un role donné
 admin.EX_ERR_GROUP_NAME_FOUND_TWICE = Deux groupes racines distincts ont le meme nom
@@ -121,8 +121,8 @@ admin.EX_ERR_GROUP_NOT_FOUND = Impossible de trouver le groupe demandé
 admin.EX_ERR_GROUP_NOT_IN_SPACE_USERROLE = Le groupe spécifié n'appartient pas au role d'espace
 admin.EX_ERR_GROUP_NOT_IN_USERROLE = Le groupe spécifié n'appartient pas au role
 admin.EX_ERR_GROUP_SPECIFIC_ID_FOUND_TWICE = Deux groupes distincts ont le même id specifique
-admin.EX_ERR_INSTANCE_NOT_FOUND = Impossible de trouver l'instance de composant demandée
-admin.EX_ERR_INSTANTIATE_COMPONENTS = Erreur pendant l'instanciation de composants
+admin.EX_ERR_INSTANCE_NOT_FOUND = Impossible de trouver l'instance de l'application demandée
+admin.EX_ERR_INSTANTIATE_COMPONENTS = Erreur pendant l'instanciation de l'applications
 admin.EX_ERR_INVALID_GROUP = Groupe invalide (id ou nom non renseignés, ou groupe null)
 admin.EX_ERR_GROUP_PARENT_NOT_PRESENT = Le groupe a synchroniser n'a pas de pere dans l'arborescence silverpeas
 admin.EX_ERR_INVALID_SPACE = Espace invalide (nom non renseigné)
@@ -146,7 +146,7 @@ admin.EX_ERR_RELEASE_SCHEMA = Erreur lors de la libération du schéma
 admin.EX_ERR_REMOVE_USER_FROM_GROUP = Erreur lors de la suppression d'un utilisateur d'un groupe
 admin.EX_ERR_RESET_USERSET_TABLES = Erreur lors de la réinitialisation des liens userset
 admin.EX_ERR_ROLLBACK = Erreur lors du rollback
-admin.EX_ERR_SET_COMPONENT = Erreur lors du montage en mémoire du composant
+admin.EX_ERR_SET_COMPONENT = Erreur lors du montage en mémoire de l'application
 admin.EX_ERR_SET_PROFILE = Erreur lors du montage en mémoire du role
 admin.EX_ERR_SET_SPACE = Erreur lors du montage en mémoire de l'espace
 admin.EX_ERR_SET_SPACE_PROFILE = Erreur lors du montage en mémoire du role d'espace
@@ -160,13 +160,13 @@ admin.EX_ERR_START_TRANSACTION = Erreur lors du démarrage de la transaction
 admin.EX_ERR_SYNCHRONIZE_DOMAIN = Erreur lors de la synchronisation du domaine
 admin.EX_ERR_SYNCHRONIZE_DOMAIN_GROUPS = Erreur lors de la synchronisation des groupes du domaine
 admin.EX_ERR_SYNCHRONIZE_DOMAIN_USERS = Erreur lors de la synchronisation des utilisateurs du domaine
-admin.EX_ERR_UNINSTANTIATE_COMPONENTS = Erreur lors de la désinstanciation du composant
+admin.EX_ERR_UNINSTANTIATE_COMPONENTS = Erreur lors de la désinstanciation de l'application
 admin.EX_ERR_UNKNOWN_FATHER = Le père du groupe devant être inséré n'existe pas 
 admin.EX_ERR_UNKNOWN_GROUP = Le groupe dans lequel l'utilisateur doit être placé n'existe pas 
 admin.EX_ERR_UNKNOWN_USER = L'utilisateur devant être rajouté au groupe n'existe pas
 admin.EX_ERR_UPDATE = Erreur lors de la mise à jour
 admin.EX_ERR_UPDATE_ADMINS = Erreur lors de la mise à jour du groupe d'administrateurs
-admin.EX_ERR_UPDATE_COMPONENT = Erreur lors de la mise à jour du composant
+admin.EX_ERR_UPDATE_COMPONENT = Erreur lors de la mise à jour de l'application
 admin.EX_ERR_UPDATE_DOMAIN = Erreur lors de la mise à jour du domaine
 admin.EX_ERR_UPDATE_GROUP = Erreur lors de la mise à jour du groupe
 admin.EX_ERR_UPDATE_PROFILE = Erreur lors de la mise à jour du rôle
@@ -174,7 +174,7 @@ admin.EX_ERR_UPDATE_SPACE = Erreur lors de la mise à jour de l'espace
 admin.EX_ERR_UPDATE_SPACEPROFILE = Erreur lors de la mise à jour du rôle d'espace
 admin.EX_ERR_UPDATE_USER = Erreur lors de la mise à jour de l'utilisateur
 admin.EX_ERR_UPDATE_USER_DETAIL = Erreur lors de la mise à jour des détails de l'utilisateur
-admin.EX_ERR_UPDATE_USERPROFILE_COMPONENT = Erreur lors de la mise à jour du composant courant dans le profil utilisateur
+admin.EX_ERR_UPDATE_USERPROFILE_COMPONENT = Erreur lors de la mise à jour de l'application courante dans le profil utilisateur
 admin.EX_ERR_UPDATE_USERPROFILE_SPACE = Erreur lors de la mise à jour de l'espace courant dans le profil utilisateur
 admin.EX_ERR_USER_NOT_FOUND = Utilisateur introuvable
 admin.EX_ERR_USER_NOT_IN_GROUP = L'utilisateur n'appartient pas au groupe spécifié
@@ -183,23 +183,23 @@ admin.EX_ERR_USER_NOT_IN_USERROLE = L'utilisateur n'appartient pas au role spéci
 admin.EX_ERR_USERROLE_NAME_INSTANCEID_FOUND_TWICE = Deux rôles distincts de la même instance ont le même nom
 admin.EX_ERR_USERROLE_NOT_FOUND = Rôle introuvable
 admin.EX_ERR_WACOMPONENT = Erreur dans le constructeur
-admin.EX_ERR_MOVE_COMPONENT = Erreur lors du déplacement du composant
+admin.EX_ERR_MOVE_COMPONENT = Erreur lors du déplacement de l'application
 
 admin.MSG_ERR_ADD_DOMAIN = Erreur dans l'ajout du domaine
-admin.MSG_ERR_ADD_COMPONENT = Erreur dans l'ajout du composant
+admin.MSG_ERR_ADD_COMPONENT = Erreur dans l'ajout de l'application
 admin.MSG_ERR_ADD_PROFILE = Erreur dans l'ajout du rôle
 admin.MSG_ERR_ADD_SPACE = Erreur dans l'ajout de l'espace
 admin.MSG_ERR_ADD_SPACE_PROFILE = Erreur dans l'ajout rôle d'espace
 admin.MSG_ERR_ADD_USER = Erreur dans l'ajout de l'utilisateur
 admin.MSG_ERR_AUTHENTICATE_USER = Erreur dans l'authentification de l'utilisateur
 admin.MSG_ERR_DELETE_DOMAIN = Erreur dans la suppression du domaine
-admin.MSG_ERR_DELETE_COMPONENT = Erreur dans la suppression du composant
+admin.MSG_ERR_DELETE_COMPONENT = Erreur dans la suppression de l'application
 admin.MSG_ERR_DELETE_PROFILE = Erreur dans la suppression du rôle
 admin.MSG_ERR_DELETE_SPACE = Erreur dans la suppression de l'espace
 admin.MSG_ERR_DELETE_SPACE_PROFILE = Erreur dans la suppression du rôle d'espace
 admin.MSG_ERR_GET_ALL_ADMIN_IDS = Erreur dans l'obtention de la liste des ids administrateurs
-admin.MSG_ERR_GET_ALL_COMPONENT_NAMES = Erreur dans l'obtention de la liste des noms de composants
-admin.MSG_ERR_GET_ALL_COMPONENTS = Erreur dans l'obtention de la liste des composants
+admin.MSG_ERR_GET_ALL_COMPONENT_NAMES = Erreur dans l'obtention de la liste des noms des applications
+admin.MSG_ERR_GET_ALL_COMPONENTS = Erreur dans l'obtention de la liste des applications
 admin.MSG_ERR_GET_ALL_DOMAINS = Erreur dans l'obtention de la liste des domaines
 admin.MSG_ERR_GET_ALL_GROUP_IDS = Erreur dans l'obtention de la liste des ids des groupes
 admin.MSG_ERR_GET_ALL_GROUPS = Erreur dans l'obtention de la liste des groupes
@@ -208,7 +208,7 @@ admin.MSG_ERR_GET_ALL_SPACE_IDS = Erreur dans l'obtention de la liste des ids de
 admin.MSG_ERR_GET_ALL_SPACE_PROFILE_NAMES = Erreur dans l'obtention de la liste des noms de rôles d'espace
 admin.MSG_ERR_GET_ALL_USER_IDS = Erreur dans l'obtention de la liste des ids utilisateurs
 admin.MSG_ERR_GET_ALL_USERS = Erreur dans l'obtention de la liste des utilisateurs
-admin.MSG_ERR_GET_COMPONENT = Erreur dans l'obtention du composant
+admin.MSG_ERR_GET_COMPONENT = Erreur dans l'obtention de l'application
 admin.MSG_ERR_GET_CURRENT_PROFILE = Erreur dans l'obtention du profil utilisateur
 admin.MSG_ERR_GET_DOMAIN = Erreur dans l'obtention du domaine
 admin.MSG_ERR_GET_GROUP_NAME = Erreur dans l'obtention du nom du groupe
@@ -222,9 +222,9 @@ admin.MSG_ERR_GET_SPACE_NAMES = Erreur dans l'obtention des noms des espaces
 admin.MSG_ERR_GET_SPACE_PROFILE = Erreur dans l'obtention du role d'espace
 admin.MSG_ERR_GET_SUBSPACE_IDS = Erreur dans l'obtention des ids des sous-espaces
 admin.MSG_ERR_GET_USER = Erreur dans l'obtention de l'utilisateur
-admin.MSG_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Erreur dans l'obtention des ids des composants accessibles
-admin.MSG_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur dans l'obtention des instances accessibles pour un composant donné
-admin.MSG_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur dans l'obtention des instances pour un composant donné
+admin.MSG_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Erreur dans l'obtention des ids des applications accessibles
+admin.MSG_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur dans l'obtention des instances accessibles pour une application donnée
+admin.MSG_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Erreur dans l'obtention des instances pour une application donnée
 admin.MSG_ERR_GET_USER_AVAILABLE_SPACE_IDS = Erreur dans l'obtention des ids des espaces accessibles
 admin.MSG_ERR_GET_USER_AVAILABLE_SUBSPACE_IDS = Erreur dans l'obtention des ids des sous-espaces accessibles
 admin.MSG_ERR_GET_USERPROFILE = Erreur dans l'obtention du profil utilisateur
@@ -235,34 +235,34 @@ admin.MSG_ERR_SYNCHRONIZE_DOMAIN = Erreur lors de la synchronization du domaine
 admin.MSG_ERR_SYNCHRONIZE_USER = Erreur lors de la synchronization de l'utilisateur
 admin.MSG_ERR_SYNCHRONIZE_GROUP = Erreur lors de la synchronization du groupe
 admin.MSG_ERR_UPDATE_ADMINS = Erreur lors de la mise à jour du groupe d'administrateurs
-admin.MSG_ERR_UPDATE_COMPONENT = Erreur lors de la mise à jour du composant
+admin.MSG_ERR_UPDATE_COMPONENT = Erreur lors de la mise à jour de l'application
 admin.MSG_ERR_UPDATE_PROFILE = Erreur lors de la mise à jour du rôle
 admin.MSG_ERR_UPDATE_SPACE = Erreur lors de la mise à jour de l'espace
 admin.MSG_ERR_UPDATE_SPACE_PROFILE = Erreur lors de la mise à jour du rôle d'espace
 admin.MSG_FATAL_GET_GENERAL_ADMIN_ID = Impossible d'obtenir l'id du super administrateur
 admin.MSG_FATAL_GET_GENERAL_SPACE_ID = Impossible d'obtenir l'id de l'espace entreprise
 admin.MSG_FATAL_GET_ORGANIZATION = Impossible d'obtenir l'organisation schéma
-admin.MSG_INFO_BUILD_WA_COMPONENT_LIST = Construction de la liste des composants
+admin.MSG_INFO_BUILD_WA_COMPONENT_LIST = Construction de la liste des applications
 admin.MSG_INFO_COMPONENT_FOUND = Composant trouvé
 admin.MSG_INFO_DOMAINSSP_INSTANCE_CREATION = Instanciation du driver silverpeas
-admin.MSG_INFO_GET_ALL_COMPONENTS = Obtention de tous les composants
-admin.MSG_INFO_INSTANCIATE_COMPONENT = Instanciation du composant
-admin.MSG_INFO_INSTANCIATEUR_HAS_COMPONENTS = l'instanciateur a trouvé des composants
+admin.MSG_INFO_GET_ALL_COMPONENTS = Obtention de toutes les applications
+admin.MSG_INFO_INSTANCIATE_COMPONENT = Instanciation de l'application
+admin.MSG_INFO_INSTANCIATEUR_HAS_COMPONENTS = l'instanciateur a trouvé des applications
 admin.MSG_INFO_INSTANCIATEUR_USAGE1 = Usage : instanciateur_Main <componentName>
 admin.MSG_INFO_INSTANCIATEUR_USAGE2 = Utilisation de test.xml
 admin.MSG_INFO_RESET_USERSET_TABLES = Réinitialisation des relations userset
 admin.MSG_INFO_SIMPLEPARSER_USAGE = Usage: java Simpleparser [nom-fichier]
-admin.MSG_INFO_UNINSTANCIATE_COMPONENT = Désinstanciation du composant
+admin.MSG_INFO_UNINSTANCIATE_COMPONENT = Désinstanciation de l'application
 admin.MSG_INSTANCIATEUR_RESOURCES_NOT_FOUND = Impossible de lire le fichier de ressource de l'instanciateur 
 admin.MSG_USER_ALREADY_LOGGED = L'utilisateur est déjà loggé
 admin.MSG_USER_FIRST_ACCESS = Premier accès de l'utilisateur
 admin.MSG_WARN_TRY_TO_DELETE_GENERALADMIN = Tentative de suppression de super administrateur
 admin.MSG_WARN_TRY_TO_DELETE_GENERALSPACE = Tentative de suppression de l'espace entreprise
 
-admin.MSG_ERR_GET_RESTORE_COMPONENT_FROM_BASKET = Impossible de restaurer le composant depuis la corbeille
+admin.MSG_ERR_GET_RESTORE_COMPONENT_FROM_BASKET = Impossible de restaurer l'application depuis la corbeille
 admin.MSG_ERR_GET_RESTORE_SPACE_FROM_BASKET = Impossible de restaurer l'espace depuis la corbeille
 admin.EX_ERR_SEND_SPACE_TO_BASKET = Impossible d'envoyer l'espace dans la corbeille
-admin.EX_ERR_SEND_COMPONENT_TO_BASKET = Impossible d'envoyer le composant dans la corbeille
+admin.EX_ERR_SEND_COMPONENT_TO_BASKET = Impossible d'envoyer l'application dans la corbeille
 
 admin.CANT_INDEX_USERS = Impossible d'indexer les utilisateurs d'un domaine
 admin.CANT_INDEX_ALL_USERS = Impossible d'indexer les utilisateurs
