--- a/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_fr.properties
@@ -28,15 +28,15 @@ applicationIndexer.MSG_INDEXING_ALL_SPACES = Début de l'indexation de tous les e
 applicationIndexer.MSG_START_INDEXING_SPACE = Début de l'indexation de l'espace
 applicationIndexer.MSG_END_INDEXING_SPACE = Fin de l'indexation de l'espace
 
-applicationIndexer.MSG_START_INDEXING_COMPONENT = Début de l'indexation du composant
-applicationIndexer.MSG_END_INDEXING_COMPONENT = Fin de l'indexation du composant
-applicationIndexer.EX_INDEXING_COMPONENT_FAILED = Impossible d'indexer le composant
-applicationIndexer.EX_INDEXER_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur du composant
+applicationIndexer.MSG_START_INDEXING_COMPONENT = Début de l'indexation de l'application
+applicationIndexer.MSG_END_INDEXING_COMPONENT = Fin de l'indexation de l'application
+applicationIndexer.EX_INDEXING_COMPONENT_FAILED = Impossible d'indexer l'application
+applicationIndexer.EX_INDEXER_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur de l'application
 
-applicationIndexer.MSG_START_INDEXING_PERSONAL_COMPONENT = Début de l'indexation du composant de l'espace personnel
-applicationIndexer.MSG_END_INDEXING_PERSONAL_COMPONENT = Fin de l'indexation du composant de l'espace personnel
-applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible d'indexer le composant de l'espace personnel
-applicationIndexer.EX_INDEXER_PERSONAL_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur du composant de l'espace personnel
+applicationIndexer.MSG_START_INDEXING_PERSONAL_COMPONENT = Début de l'indexation de l'application de l'espace personnel
+applicationIndexer.MSG_END_INDEXING_PERSONAL_COMPONENT = Fin de l'indexation de l'application de l'espace personnel
+applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible d'indexer l'application de l'espace personnel
+applicationIndexer.EX_INDEXER_PERSONAL_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur de l'application de l'espace personnel
 
-applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = L'indexeur du composant est introuvable !
-applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexation d'un élément d'un composant
+applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = L'indexeur de l'application est introuvable !
+applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexation d'un élément d'une application
