--- a/config-core/src/main/config/silvertrace/messages/clipboardPeasMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/clipboardPeasMessages_fr.properties
@@ -33,5 +33,5 @@ clipboardPeas.EX_CANT_GET_MSG_ERROR        = Erreur pendant la lecture du presse
 clipboardPeas.EX_CANT_GET_MSG_ERROR        = Impossible d'ontenir la langue par défaut
 clipboardPeas.EX_CANT_GET_MESSAGE          = Impossible d'obtenir le message
 clipboardPeas.EX_CANT_GET_DEFAULT_LANGUAGE = Impossible d'obtenir la langue par défault
-clipboardPeas.EX_CANT_GET_COMPO_LABEL      = Impossible d'obtenir le nom du composant
+clipboardPeas.EX_CANT_GET_COMPO_LABEL      = Impossible d'obtenir le nom de l'application
 clipboardPeas.EX_CANT_WRITE                = Erreur pendant l'écriture
