--- a/config-core/src/main/config/silvertrace/messages/containerManagerMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/containerManagerMessages_fr.properties
@@ -35,7 +35,7 @@ containerManager.EX_CONTENTTYPE_EMPTY = Le contentType donné est vide
 # Errors on Instances
 containerManager.EX_CANT_REGISTER_CONTAINER_INSTANCE = Impossible d'enregistrer la nouvelle instance de container
 containerManager.EX_CANT_UNREGISTER_CONTAINER_INSTANCE = Impossible de supprimer une instance de container
-containerManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver le composant
+containerManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver l'application
 
 # Generic errors on database
 containerManager.EX_CANT_QUERY_DATABASE = Impossible d'executer un select sur la base
