--- a/config-core/src/main/config/silvertrace/messages/contentManagerMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/contentManagerMessages_fr.properties
@@ -35,12 +35,12 @@ contentManager.EX_CONTENTTYPE_EMPTY = Le contentType donné est vide
 # Errors on Instances
 contentManager.EX_CANT_REGISTER_CONTENT_INSTANCE = Impossible d'enregistrer la nouvelle instance de content
 contentManager.EX_CANT_UNREGISTER_CONTENT_INSTANCE = Impossible de supprimer une instance de content
-contentManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver le composant
+contentManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver l'application
 contentManager.EX_CANT_INSTANCIATE_CONTAINERMANAGER = Impossible d'instancier le ContainerManager
 
 # Generic errors on database
 contentManager.EX_CANT_QUERY_DATABASE = Impossible d'executer un select sur la base
-contentManager.EX_UNKNOWN_CONTENT_PEAS = Content Peas inconnu pour ce composant
+contentManager.EX_UNKNOWN_CONTENT_PEAS = Content Peas inconnu pour cette application
 contentManager.EX_CANT_LOAD_ASSO_CACHE = Impossible de charger le cache
 
 # Errors on SilverContent
