--- a/config-core/src/main/config/silvertrace/messages/favoritMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/favoritMessages_fr.properties
@@ -26,4 +26,4 @@ favorit.CANNOT_REMOVE_FAVORIT = Impossible de supprimer le favori
 favorit.CANNOT_REMOVE_FAVORIT_BY_USER = Impossible de supprimer les favoris de l'utilisateur
 favorit.CANNOT_REMOVE_FAVORIT_BY_NODE = Impossible de supprimer les favoris concernant ce noeud
 favorit.CANNOT_GET_FAVORIT_BY_USER = Impossible d'obtenir les favoris de l'utilisateur
-favorit.CANNOT_GET_FAVORIT_BY_USER_SPACE_COMPONENT = Impossible d'obtenir les favoris de l'utilisateur pour cet espace et ce composant
+favorit.CANNOT_GET_FAVORIT_BY_USER_SPACE_COMPONENT = Impossible d'obtenir les favoris de l'utilisateur pour cet espace et cette application
