--- a/config-core/src/main/config/silvertrace/messages/indexEngineMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/indexEngineMessages_fr.properties
@@ -24,7 +24,7 @@
 # MODULE : indexEngine
 #
 
-# utilisation de l'indexEngine depuis les composants silverpeas
+# utilisation de l'indexEngine depuis les applications silverpeas
 indexEngine.MSG_EJB_HOME_UNFOUND = Impossible d'accèder à l'ejb home du moteur d'indexation
 indexEngine.MSG_EJB_CREATE_FAILED = Impossible de créer l'ejb du moteur d'indexation
 indexEngine.MSG_INDEX_ENGINE_UNFOUND = Impossible d'accèder au moteur d'indexation
