--- a/config-core/src/main/config/silvertrace/messages/notificationManagerMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/notificationManagerMessages_fr.properties
@@ -50,7 +50,7 @@ notificationManager.EX_CANT_CREATE_USER_NOTIFICATION = Erreur pendant la constru
 notificationManager.EX_CANT_SEND_USER_NOTIFICATION = Erreur pendant l'envoi de la notification
 
 notificationManager.EX_CANT_GET_USERS_OF_GROUP = Impossible de recuperer les utilisateurs d'un groupe
-notificationManager.EX_CANT_GET_COMPONENT_FULL_NAME = Impossible de recuperer le nom complet d'un composant
+notificationManager.EX_CANT_GET_COMPONENT_FULL_NAME = Impossible de recuperer le nom complet d'une application
 notificationManager.EX_CANT_GET_USER_EMAIL = Impossible d'obtenir l'adresse e-mail d'un utilisateur
 notificationManager.EX_CANT_GET_USER_FULL_NAME = Impossible d'obtenir le nom complet d'un utilisateur
 
