--- a/config-core/src/main/config/silvertrace/messages/personalizationPeasMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/personalizationPeasMessages_fr.properties
@@ -42,7 +42,7 @@ personalizationPeas.EX_CANT_TEST_NOTIFICATION_ADDRESS = Erreur pendant le test d
 personalizationPeas.EX_CANT_GET_DEFAULT_ADDRESS = Erreur pendant l'obtention de l'adresse par defaut
 personalizationPeas.EX_CANT_SET_DEFAULT_ADDRESS = Erreur pendant la mise a jour de l'adresse par defaut
 personalizationPeas.EX_CANT_ADD_NOTIFICATION_PREFERENCE = Erreur pendant l'ajout d'une preference
-personalizationPeas.EX_CANT_GET_INSTANCE_LIST = Erreur pendant l'obtention de la liste des composants disponibles
+personalizationPeas.EX_CANT_GET_INSTANCE_LIST = Erreur pendant l'obtention de la liste des applications disponibles
 
 personalizationPeas.MSG_CANT_PARSE_ID = Erreur lors du parsing du nom de l'espace
 personalizationPeas.EX_CANT_SET_FAVORITE_COLLWS = Erreur lors de la mis à jour de l'espace préféré
