--- a/config-core/src/main/config/silvertrace/messages/silverstatisticsMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/silverstatisticsMessages_fr.properties
@@ -50,7 +50,7 @@ silverstatistics.MSG_KEY_RUN_MISSING = La clé StatsRunXXX est manquante
 silverstatistics.MSG_KEY_PURGE_MISSING = La clé StatsPurgeInMonthXXX est manquante
 silverstatistics.MSG_CONFIG_FILE_KEY_MISSING = Le fichier de configuration silverstatistics.properties est mal formé, il manque une clé
 
-silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FOUND = Impossible de trouver l'alimentation du volume du composant 
-silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FAILED = Impossible d'alimenter du volume du composant 
+silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FOUND = Impossible de trouver l'alimentation du volume de l'application 
+silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FAILED = Impossible d'alimenter du volume de l'application 
 
 
