--- a/config-core/src/main/config/silvertrace/messages/workflowDesignerMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/workflowDesignerMessages_fr.properties
@@ -53,8 +53,8 @@ workflowDesigner.EX_FORM_EXISTS = Un formulaire avec le nom et le rôle spécifiés
 workflowDesigner.EX_INPUT_EXISTS = Un champ avec l'item ou la valeur spécifiés existe déjà!
 workflowDesigner.EX_INPUT_NOT_FOUND = Impossible de trouver le champ!
 workflowDesigner.EX_ELEMENT_REFERENCED = Erreur lors de la suppression de l'élément, il est référencé dans l'élément de type
-workflowDesigner.EX_ERR_READ_WA_COMPONENTS = Erreur lors du chargement du descriptif du composant 
-workflowDesigner.EX_ERR_WRITE_WA_COMPONENTS = Erreur lors de la sauvegarde du descriptif du composant
+workflowDesigner.EX_ERR_READ_WA_COMPONENTS = Erreur lors du chargement du descriptif de l'application 
+workflowDesigner.EX_ERR_WRITE_WA_COMPONENTS = Erreur lors de la sauvegarde du descriptif de l'application
 workflowDesigner.EX_ERR_MODEL_ALREADY_EXISTS = Un modèle avec le même nom existe déjà
 workflowDesigner.EX_ERR_IMPORT_MODEL_FAILED = Impossible d'importer le modèle
 workflowDesigner.EX_ERR_TRY_TO_IMPORT_INVALID_MODEL = Le modèle n'est pas valide
