--- a/config-core/src/main/config/silvertrace/messages/workflowEngineMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/workflowEngineMessages_fr.properties
@@ -24,7 +24,7 @@
 # MODULE : workflowEngine
 #
 
-workflowEngine.EXP_COMPONENT_CREATION_FAILED = Impossible de créer un composant
+workflowEngine.EXP_COMPONENT_CREATION_FAILED = Impossible de créer une application
 workflowEngine.EXP_ITEM_UPDATE_FAILED = Impossible de mettre à jour le champ
 
 workflowEngine.EXP_UNKNOWN_USER = utilisateur inconnu
