--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
@@ -37,7 +37,7 @@ fileSharing.updateTicket = Mettre \u00e0 jour un ticket
 fileSharing.createTicket = Cr\u00e9er un ticket
 fileSharing.deleteTicket = Supprimer un ticket
 fileSharing.fileId = Id du fichier
-fileSharing.componentId = Id du composant
+fileSharing.componentId = Id de l'application
 fileSharing.versioning = Versioning
 fileSharing.creationDate = Cr\u00e9\u00e9 le
 fileSharing.by = par
