--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -28,11 +28,11 @@ JSPP.homepageType = Type de page d'accueil
 JSPP.main = Accueil Silverpeas
 JSPP.manageHomePage = Espaces
 
-JSPP.peas = Service
+JSPP.peas = Application
 JSPP.portlet = Portlet
 JSPP.webPage = URL
 
-JSPP.selectPeas = Sélection d'un service
+JSPP.selectPeas = Sélection d'une application
 JSPP.spaceHomePage = Page d'accueil de l'espace
 
 JSPP.update = Modifier
@@ -61,10 +61,10 @@ JSPP.SpaceProfilePanelCreateTitle = Définir les utilisateurs du rôle
 JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du rôle
 JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du rôle
 
-JSPP.ComponentPanelCreateTitle = Ajouter un service
-JSPP.ComponentPanelModifyTitle = Modifier le service
-JSPP.ComponentPanelDeleteTitle = Supprimer le service
-JSPP.CopyComponent = Copier le service
+JSPP.ComponentPanelCreateTitle = Ajouter une application
+JSPP.ComponentPanelModifyTitle = Modifier l'application
+JSPP.ComponentPanelDeleteTitle = Supprimer l'application
+JSPP.CopyComponent = Copier l'application
 JSPP.PasteComponent = Coller
 
 JSPP.SubSpacePanelCreateTitle = Créer un sous espace
@@ -79,7 +79,7 @@ JSPP.ModifyStartPage = Modifier la page d'accueil
 JSPP.creationSpace = Création d'espace
 JSPP.creationSubSpace = Création de sous-espace
 JSPP.updateSpace = Modification d'espace
-JSPP.creationInstance = Ajout d'un service
+JSPP.creationInstance = Ajout d'une application
 JSPP.roleDescription = Description du rôle
 
 //erreurs
@@ -94,7 +94,7 @@ JSPP.MustBeginsByHTTP = doit contenir une URL débutant par http:// ou https://
 JSPP.MessageSuppressionSpaceBegin = Etes-vous sûr(e) de vouloir supprimer cet espace ?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
 JSPP.MessageSuppressionSpaceManager = Etes-vous sûr(e) de vouloir supprimer les utilisateurs ?
-JSPP.MessageSuppressionInstanceBegin = Etes-vous sûr(e) de vouloir supprimer ce service ?\\n\\n-->
+JSPP.MessageSuppressionInstanceBegin = Etes-vous sûr(e) de vouloir supprimer cette application ?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 //onglets roles
@@ -108,38 +108,38 @@ JSPP.reader = Lecteurs
 JSPP.SpaceOrder = Déplacer l'espace
 JSPP.SpacePlace = Déplacement avant l'espace
 JSPP.PlaceLast = Déplacer en fin
-JSPP.ComponentOrder = Déplacer le service
-JSPP.ComponentPlace = Déplacement avant le composant
+JSPP.ComponentOrder = Déplacer l'application
+JSPP.ComponentPlace = Déplacement avant l'application
 
-// position espace, composant
-JSPP.SpacePosition = Afficher les services
+// position espace, application
+JSPP.SpacePosition = Afficher les applications
 JSPP.NoSpacePosition = Sélectionner la position
 JSPP.SpacePositionFirst = Après les sous-espaces
 JSPP.SpacePositionLast = Avant les sous-espaces
 
-// Deplacement de composant
+// Deplacement de application
 JSPP.SpaceIn = Déplacement dans l'espace
 JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent être en maintenance...
-JSPP.MessageConfirmMovingComponentInSpace = Etes-vous sûr de vouloir déplacer ce composant dans cet espace ?
-JSPP.ExistingComponentName = Déplacement impossible... Un composant portant le même nom existe déja dans l'espace de destination.
+JSPP.MessageConfirmMovingComponentInSpace = Etes-vous sûr de vouloir déplacer cette application dans cet espace ?
+JSPP.ExistingComponentName = Déplacement impossible... Une application portant le même nom existe déja dans l'espace de destination.
 JSPP.movingInProgress = Déplacement en cours...
 
 // Copy/Cut/Paste component
 JSPP.CopyOf = Copie de 
 
 //Sauvegarde
-JSPP.BackupUnlimited = Sauvegarder/Restaurer des composants
-JSPP.BackupSpace = Sauvegarder/Restaurer des composants de l'espace
+JSPP.BackupUnlimited = Sauvegarder/Restaurer des applications
+JSPP.BackupSpace = Sauvegarder/Restaurer des applications de l'espace
 
-JSPP.ErrorComponentCreation = Erreur lors de la création du composant
-JSPP.ErrorComponentUpdate = Erreur lors de la modification du composant
-JSPP.ErrorComponentMessage = Vérifiez qu'un autre composant de l'espace ne porte pas déjà le même nom !
+JSPP.ErrorComponentCreation = Erreur lors de la création de l'application
+JSPP.ErrorComponentUpdate = Erreur lors de la modification de l'application
+JSPP.ErrorComponentMessage = Vérifiez qu'une autre application de l'espace ne porte pas déjà le même nom !
 JSPP.ErrorSpaceCreation = Erreur lors de la création de l'espace
 JSPP.ErrorSpaceUpdate = Erreur lors de la modification de l'espace
 JSPP.ErrorSpaceMessage = Vérifiez qu'un autre espace de même niveau ne porte pas déjà le même nom !
 
 //Corbeille
-JSPP.Bin = Corbeille d'espaces et de composants
+JSPP.Bin = Corbeille d'espaces et d'applications
 JSPP.BinRemoveDate = Date de suppression
 JSPP.BinRestore = Restaurer
 JSPP.BinRestoreSelected = Etes-vous sûr(e) de vouloir restaurer les éléments sélectionnés ?
@@ -155,9 +155,9 @@ JSPP.localRights = Droits spécifiques
 JSPP.inheritedRights = Droits hérités
 
 JSPP.inheritanceSpaceNotUsed = Ce sous espace n'hérite pas des droits de l'espace.
-JSPP.inheritanceComponentNotUsed = Ce composant n'hérite pas des droits de l'espace.
+JSPP.inheritanceComponentNotUsed = Cette application n'hérite pas des droits de l'espace.
 JSPP.inheritanceSpaceUsed = Ce sous espace hérite des droits de l'espace.
-JSPP.inheritanceComponentUsed = Ce composant hérite des droits de l'espace.
+JSPP.inheritanceComponentUsed = Cette application hérite des droits de l'espace.
 JSPP.click = Cliquez
 JSPP.here = ici
 JSPP.inheritanceToNotUse = pour ne plus utiliser les droits de l'espace.
