--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_fr.properties
@@ -28,7 +28,7 @@ portlets.portlet.lastPublis.pref.nbPublis = Nombre de publications \u00e0 affich
 portlets.portlet.lastPublis.pref.maxAge = Age maximal des publications (en jours)
 portlets.portlet.lastPublis.pref.displayDescription = Afficher la description
 portlets.portlet.lastPublis.error = Vous devez saisir un nombre en 0 et 30 !
-portlets.portlet.lastPublis.help = Cette portlet affiche les derni\u00e8res publications cr\u00e9\u00e9es ou modifi\u00e9es dans les diff\u00e9rents services de gestion documentaire.<br/>Vous pouvez param\u00e9trer le nombre de publications \u00e0 afficher.
+portlets.portlet.lastPublis.help = Cette portlet affiche les derni\u00e8res publications cr\u00e9\u00e9es ou modifi\u00e9es dans les diff\u00e9rentes applications de gestion documentaire.<br/>Vous pouvez param\u00e9trer le nombre de publications \u00e0 afficher.
 
 portlets.portlet.nextEvents.pref.nbEvents = Nombre d'\u00e9v\u00e9nements \u00e0 afficher
 portlets.portlet.nextEvents.error = Vous devez saisir un nombre en 0 et 30 !
@@ -42,9 +42,9 @@ portlets.portlet.myCheckOutFiles.help = Cette portlet affiche tous les fichiers 
 portlets.portlet.myTodos.help = Cette portlet affiche toutes les t\u00e2ches non termin\u00e9es que vous devez accomplir.
 portlets.portlet.quickInfos.help = Cette portlet affiche toutes les actualit\u00e9s du portail.
 
-portlets.portlet.componentInstance.help = Cette portlet permet d'afficher un composant du portail. Si vous n'avez pas les droits suffisants pour y acc\u00e9der, un message d'erreur vous le signale.
+portlets.portlet.componentInstance.help = Cette portlet permet d'afficher une application du portail. Si vous n'avez pas les droits suffisants pour y acc\u00e9der, un message d'erreur vous le signale.
 portlets.portlet.componentInstance.error.accessForbidden = Acc\u00e8s non autoris\u00e9 !
-portlets.portlet.componentInstance.pref.instanceId = Identifiant du composant
+portlets.portlet.componentInstance.pref.instanceId = Identifiant de l'application
 
 portlets.portlet.iFrame.pref.url = URL
 portlets.portlet.iframe.pleaseURL = Vous devez renseigner l'URL de la page web !
