--- a/config-core/src/main/config/silvertrace/messages/peasCoreMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/peasCoreMessages_fr.properties
@@ -40,15 +40,15 @@ peasCore.EX_REDIRECT_SERVICE_FAILED = Erreur du forward de la page
 peasCore.EX_REDIRECT_ERROR_PAGE_FAILED = Erreur lors du forward vers la page d'erreur
 peasCore.EX_CANT_GET_USER_PROFILE = Erreur pendant l'obtention du profil de l'utilisateur
 peasCore.EX_CANT_GET_USER_DETAIL = Impossible d'obtenir les infos sur l'utilisateur
-peasCore.EX_CANT_CREATE_COMPONENT_CONTEXT = Impossible de creer le contexte du composant
+peasCore.EX_CANT_CREATE_COMPONENT_CONTEXT = Impossible de creer le contexte de l'application
 peasCore.EX_SET_USER_SPACE = Impossible de fixer le nouvel espace
-peasCore.EX_SET_USER_COMPONENT = Impossible de fixer le nouveau composant
+peasCore.EX_SET_USER_COMPONENT = Impossible de fixer la nouvelle application
 peasCore.EX_UPDATE_USER_PROFILE = Erreur pendant la mise a jour du profil utilisateur
 peasCore.EX_LOGIN_SERVLET_CANT_CREATE_MAIN_SESSION_CTRL = La servlet de login ne peut pas creer le Main Session controller
 peasCore.EX_USER_KEY_NOT_FOUND = Aucun utilisateur defini avec cette cle
 
 peasCore.MSG_SESSION_CONTROLLER_INSTANCIATED = Session Controller instancie
-peasCore.MSG_USER_NOT_ALLOWED = Utilisateur non autorise a acceder a composant
+peasCore.MSG_USER_NOT_ALLOWED = Utilisateur non autorise a acceder a l'application
 peasCore.MSG_COMPONENT_AVAILABLE_FOR_USER = Composant disponible pour l'utilisateur
 peasCore.MSG_END_OF_HTTPSESSION = Fin de la session http
 
